# igraph-cpp

./: CMakeLists.txt  README.md  ex_basic.cpp  ex_decompose.cpp  ex_error.cpp  ex_graph.cpp  ex_igraph_tutorial.cpp  ex_list.cpp  ex_matrix.cpp  ex_vector_print.hpp  ex_views.cpp  graph_list_pmt.hpp  igraph.hpp  igraph_pmt.hpp  mat_list_pmt.hpp  mat_pmt.hpp  test.cpp  typed_list_pmt.hpp  vec_list_pmt.hpp  vec_pmt.hpp
.github/workflows/: build-cmake.yml
cmake/: igraph-cpp-config.cmake.in
examples/: CMakeLists.txt  ex_basic.cpp  ex_bitset.cpp  ex_complex.cpp  ex_decompose.cpp  ex_error.cpp  ex_graph.cpp  ex_igraph_tutorial.cpp  ex_list.cpp  ex_matrix.cpp  ex_rng_scope.cpp  ex_strvec.cpp  ex_vector_print.hpp  ex_views.cpp
include/: bitset.hpp  bitset_list_pmt.hpp  graph.hpp  graph_list_pmt.hpp  igraph.hpp  igraph_pmt.hpp  igraph_pmt_off.hpp  mat_list_pmt.hpp  mat_pmt.hpp  rng_scope.hpp  strvec.hpp  typed_list_pmt.hpp  vec_list_pmt.hpp  vec_pmt.hpp
